wrap up location section, fix responsive breaks on call to action

--- a/src/scss/organisms/_cta__three-to-one.scss
+++ b/src/scss/organisms/_cta__three-to-one.scss
@@ -42,6 +42,8 @@
       color: #000;
       font-size: 20px;
       margin-bottom: 0;
+
+      @include font-size(20px, 18px, 20px, 20px, 20px);
     }
 
     &-number {
@@ -52,7 +54,7 @@
       margin-bottom: 15px;
       line-height: 1;
 
-      @include font-size(39px, 35px, 30px, 28px, 28px);
+      @include font-size(39px, 32px, 30px, 28px, 28px);
 
       a {
         @include link-color(#ff7a00);
@@ -70,6 +72,8 @@
   }
 
   .btn {
+    padding: 10px 30px;
+
     &--wrapper {
       text-align: center;
       padding-bottom: 5px;
@@ -90,6 +94,8 @@
       color: #000;
       font-size: 20px;
       margin-bottom: 0;
+
+      @include font-size(20px, 18px, 20px, 20px, 20px);
     }
 
     &-number {
